# robocup-humanoid-soccer

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  __init__.py  pyproject.toml
configs/: config.py  field_hsl_2026.json
data/motions/: k1_standup_amp.npz
docs/: INTEGRATION_NOTES.md  PHASE1_TRAINING.md  WALKING.md
envs/: domain_randomization.py  gait_rewards.py  perturbations.py  phase1_dribble_shoot.py  phase1_vec.py  phase2_match.py  rewards.py  standup.py  style_command.py
evaluation/: eval_standup_genesis.py  eval_standup_mujoco.py  eval_walk_mujoco.py  evaluate.py
gamecontroller/: sim_game_controller.py
models/: field_builder.py  field_generator.py
models/field/: match_scene.xml
models/textures/: make_ball_texture.py
orchestrator/: config.py  env.py  policy.py  rewards.py  self_play.py  skill_router.py
scripts/: create_mink_standup.py  create_standup_amp.py  debug_genesis_spawn.py  debug_mujoco_scene.py  eval_pose_pools.py  eval_standup_sim2sim.py  render_presentation.py  run.sh
scripts/retarget/: README.md  build_amp_reference.py  bvh_lafan1_to_k1.json  gen_k1_ik_config.py  retarget_lafan1.py
skills/: base.py  common_obs.py  common_rewards.py
skills/dribble/: config.py  env.py  rewards.py
skills/shoot/: config.py  env.py  rewards.py
skills/standup/: HOST_RECIPE_NOTES.md  README.md  config.py  env.py  rewards.py
skills/walk/: config.py  env.py  rewards.py
training/: common.py  logger.py  normalizers.py  train.py  train_orchestrator.py  train_skill.py
training/algorithms/: __init__.py  amp.py  distillation.py  flashsac.py  networks.py  (+2 more)
(+7 files in other folders)
